# bevy-experiments

./: .gitignore  Cargo.toml  README.md  bevy_experiments-1f0b8eaaa3d8e376.js  bevy_experiments-535cb1c76224e33c005d309d91d59933c25853a58cca4a0e9ac1261a1648a09b2834a63095fcdc45b0f144313885a2d9.js  bevy_experiments-5f70466413b7c20fec4c93b0f96b801ce71af8844d51a235d6957ff20940c84cf9f2f785858be9763b5cd6aa395e7d68.js  bevy_experiments-63d6e19f2b6e09334697e33b056dc79a40e37c54f31f519e2c3267d49b0fbd03c20b29e7b060294ce1dd4a99b9389ac7.js  bevy_game-ad30dad3d7d88181.js  index.html
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-page.yaml  release.yaml
assets/shaders/: atmosphere.wgsl  boids_compute.wgsl  boids_material.wgsl  instancing.wgsl  lava.wgsl  smoke.wgsl
examples/: atmosphere.rs  boids.rs  instancing.rs  lava.rs  smoke.rs
src/: lib.rs  loading.rs  main.rs  math.rs  menu.rs
src/boids/: boids_compute.rs  images.rs  mesh.rs  mod.rs  systems.rs  ui.rs  uniforms.rs
src/boxes/: system.rs
src/camera_control/: mod.rs
src/rapier_demo/: systems.rs
src/shaders/: mod.rs
src/simple_3d_scene/: mod.rs  system.rs
src/terrain/: mod.rs  system.rs  ui.rs
