[package]
name = "bevy_experiments"
version = "0.1.0"
publish = false
authors = ["Erik Vroon"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_asset_loader = { version = "0.21.0" }
bevy_rapier3d = { version = "0.27.0", features = [ "simd-stable", "debug-render-3d" ] }
bevy_egui = "0.30.0"
bevy_tasks = "0.14.2"
noise = "0.9.0"

rand = { version = "0.8.5" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30.5", default-features = false }
image = { version = "0.25.4", default-features = false }
bevy_panorbit_camera = "0.19.5"

[build-dependencies]
embed-resource = "1.8.0"
