[package]
name = "bevy_experiments"
version = "0.1.0"
publish = false
authors = ["Erik Vroon"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.16.1", features=["shader_format_glsl", "file_watcher"]}
bevy_egui = "0.35.1"
bevy_panorbit_camera = "0.27.2"
rand = "0.9.4"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30.13", default-features = false }
